# xraygistration

./: .gitmodules  CMakeLists.txt  LICENSE  build-3rdparty-deps.sh  readme.md  setup-py-venv  setup.sh  todo.md
chess/: CMakeLists.txt  chess.cpp  render.h
dicomreader/: dicomreader.py
include/common/: config.h
include/visionaray/: config.h
match/: CMakeLists.txt  host_device_rt.cpp  render.cpp  render.h  timer.h  volume_reader.cpp
match/old/: niftireader.h
src/: CMakeLists.txt  match.cpp
src/chess/: CMakeLists.txt  chess.cpp  chess.cu  render.cpp  render.h
src/dicomreader/: dicomreader.py
src/dnnmatch/: aimatch.py  aimatch_anari.py  lac_transform.py  main.py  render.py  render_anari.py  resnet-sav.py  resnet.py  resnet_layers.py
src/drr-viewer/: CMakeLists.txt  FieldTypes.h  README.md  SettingsEditor.cpp  SettingsEditor.h  Viewport.cpp  Viewport.h  attenuation.h  readNifti.cpp  readNifti.h  viewer.cpp
src/match/: CMakeLists.txt  attenuation.h  feature_matcher.h  fileio.h  host_device_rt.cpp  match.cpp  match.cu  match_result.h  nifti.h  orb_matcher.h  prediction.h  render.cpp  render.cu  render.h  surf_sift_matcher.h  volume_reader.cpp  volume_reader.h
src/match/old/: nifti.cpp
src/nii2png/: nii2png.py
testfiles/: testimages-novignette.txt  testimages.txt
